[gd_scene load_steps=23 format=3 uid="uid://b1tjneu4mwwbk"]

[ext_resource type="Script" path="res://scn/Levels/scene_transition.gd" id="1_mh5ua"]
[ext_resource type="Theme" uid="uid://ba8h2u1lk5xof" path="res://themes/btnBlack_theme.tres" id="2_40b8j"]
[ext_resource type="Script" path="res://scn/Levels/PauseMenu.gd" id="3_1f51x"]
[ext_resource type="Texture2D" uid="uid://ctx8hafpdpcdw" path="res://assets/UI/MenuBGFrame.png" id="3_14vb7"]
[ext_resource type="Texture2D" uid="uid://c4cmw06dvjj0e" path="res://assets/UI/HP bar/healthbarpng.png" id="4_8dpj8"]
[ext_resource type="FontFile" uid="uid://cm7h7i0x8oy3g" path="res://fonts/belwebdbtrusbyme_bold.otf" id="5_3mt17"]
[ext_resource type="Texture2D" uid="uid://6a543u2e0usk" path="res://assets/UI/HP bar/Canbarıgösterimpng.png" id="5_abq4u"]
[ext_resource type="Theme" uid="uid://bxalubuejabn1" path="res://themes/btn_theme.tres" id="6_bwdxh"]
[ext_resource type="Script" path="res://scn/MainMenu/VolumeOptions.gd" id="7_d2l42"]
[ext_resource type="AudioStream" uid="uid://c483gqnox7syu" path="res://assets/sounds/button assorted 96.wav" id="10_ov7lo"]

[sub_resource type="Animation" id="Animation_4dt2u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mjgdn"]
resource_name = "fadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vs1yd"]
resource_name = "fadeOut"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6xb31"]
_data = {
"RESET": SubResource("Animation_4dt2u"),
"fadeIn": SubResource("Animation_mjgdn"),
"fadeOut": SubResource("Animation_vs1yd")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_36phx"]
texture = ExtResource("3_14vb7")
region_rect = Rect2(14, 8, 694, 1179)
modulate_color = Color(0.647059, 0.647059, 0.647059, 1)

[sub_resource type="Theme" id="Theme_u518d"]
Panel/styles/panel = SubResource("StyleBoxTexture_36phx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3twk"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_76t7c"]
Button/colors/icon_disabled_color = Color(1, 1, 1, 0)
Button/colors/icon_focus_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
Button/colors/icon_normal_color = Color(1, 1, 1, 0)
Button/colors/icon_pressed_color = Color(1, 1, 1, 0)
CheckButton/styles/focus = SubResource("StyleBoxFlat_n3twk")

[sub_resource type="Animation" id="Animation_88fcc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b844p"]
resource_name = "fadeText"
length = 3.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.8, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m7r83"]
_data = {
"RESET": SubResource("Animation_88fcc"),
"fadeText": SubResource("Animation_b844p")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cqyk4"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("10_ov7lo")
stream_0/weight = 1.0

[node name="SceneTransition" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_mh5ua")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6xb31")
}

[node name="PlayerUI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PauseMenu" type="Control" parent="PlayerUI"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_40b8j")
script = ExtResource("3_1f51x")

[node name="Panel" type="Panel" parent="PlayerUI/PauseMenu"]
layout_mode = 1
anchors_preset = -1
offset_left = -166.0
offset_top = -180.0
offset_right = 166.0
offset_bottom = 180.0
theme = SubResource("Theme_u518d")

[node name="Label" type="Label" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 27.0
offset_right = 60.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Пауза"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -93.0
offset_right = 105.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="PlayerUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[node name="Options" type="Button" parent="PlayerUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="Save" type="Button" parent="PlayerUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Сохранить"

[node name="Load" type="Button" parent="PlayerUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Загрузить"

[node name="Quit" type="Button" parent="PlayerUI/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Выйти"

[node name="Options" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_top = 112.0
offset_right = 270.0
offset_bottom = 664.0
grow_horizontal = 2
theme = SubResource("Theme_u518d")

[node name="Video" type="Label" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 196.0
offset_right = 195.0
offset_bottom = 231.0
grow_horizontal = 2
theme = ExtResource("2_40b8j")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Видео"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 230.0
offset_right = 195.0
offset_bottom = 303.0
grow_horizontal = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerUI/Options/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheckBtn" type="CheckButton" parent="PlayerUI/Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_76t7c")
theme_override_colors/font_color = Color(0.868985, 0.868985, 0.868985, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 15
theme_override_constants/check_v_offset = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_3mt17")
theme_override_font_sizes/font_size = 22
text = "Полноэкранный режим"

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/Options/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Resolution" type="Label" parent="PlayerUI/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_bwdxh")
theme_override_colors/font_color = Color(0.870588, 0.870588, 0.870588, 1)
text = " Разрешение экрана"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="PlayerUI/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_bwdxh")
item_count = 2
selected = 0
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1280 x 1024"
popup/item_1/id = 1

[node name="Audio" type="Label" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -41.0
offset_right = 195.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_40b8j")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Аудио"
horizontal_alignment = 1

[node name="VolumeOptions" type="VBoxContainer" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -4.0
offset_right = 195.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("7_d2l42")

[node name="Master" type="Label" parent="PlayerUI/Options/VolumeOptions"]
layout_mode = 2
theme = ExtResource("6_bwdxh")
theme_override_colors/font_color = Color(0.870588, 0.870588, 0.870588, 1)
text = "Общая громкость"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="PlayerUI/Options/VolumeOptions"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_40b8j")
max_value = 1.0
step = 0.001

[node name="Music" type="Label" parent="PlayerUI/Options/VolumeOptions"]
layout_mode = 2
theme = ExtResource("6_bwdxh")
theme_override_colors/font_color = Color(0.868985, 0.868985, 0.868985, 1)
text = "Музыка"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="PlayerUI/Options/VolumeOptions"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_40b8j")
max_value = 1.0
step = 0.001
value = 0.5

[node name="SFX" type="Label" parent="PlayerUI/Options/VolumeOptions"]
layout_mode = 2
theme = ExtResource("6_bwdxh")
theme_override_colors/font_color = Color(0.868985, 0.868985, 0.868985, 1)
text = "Звуки"
horizontal_alignment = 1

[node name="SfxSlider" type="HSlider" parent="PlayerUI/Options/VolumeOptions"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_40b8j")
max_value = 1.0
step = 0.001
value = 0.5

[node name="BackBtn" type="Button" parent="PlayerUI/Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.5
offset_top = -171.0
offset_right = 86.5
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_40b8j")
text = "Назад"

[node name="GameOverWindow" type="Control" parent="PlayerUI"]
process_mode = 2
visible = false
custom_minimum_size = Vector2(310, 340)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PlayerUI/GameOverWindow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -180.0
offset_right = 166.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u518d")

[node name="Label" type="Label" parent="PlayerUI/GameOverWindow/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -128.0
offset_right = 88.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_40b8j")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Вы прошли игру!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/GameOverWindow/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -85.0
offset_right = 105.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_40b8j")
theme_override_constants/separation = 15
alignment = 1

[node name="Continue" type="Button" parent="PlayerUI/GameOverWindow/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Продолжить"

[node name="Quit" type="Button" parent="PlayerUI/GameOverWindow/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Выйти в 
главное меню"

[node name="HealthBar" type="TextureProgressBar" parent="PlayerUI"]
offset_right = 265.0
offset_bottom = 96.0
value = 17.0
nine_patch_stretch = true
texture_under = ExtResource("4_8dpj8")
texture_progress = ExtResource("5_abq4u")

[node name="NotificationLabel" type="Label" parent="PlayerUI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 36.0
offset_right = 340.0
offset_bottom = 154.0
grow_horizontal = 2
auto_translate = false
theme = ExtResource("2_40b8j")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 30
text = "Sample"
horizontal_alignment = 1
autowrap_mode = 2
max_lines_visible = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerUI"]
libraries = {
"": SubResource("AnimationLibrary_m7r83")
}

[node name="Sounds" type="AudioStreamPlayer" parent="PlayerUI"]
stream = SubResource("AudioStreamRandomizer_cqyk4")
bus = &"Sfx"

[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/VBoxContainer/Continue" to="PlayerUI/PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/VBoxContainer/Options" to="PlayerUI/PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/VBoxContainer/Save" to="PlayerUI/PauseMenu" method="_on_save_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/VBoxContainer/Load" to="PlayerUI/PauseMenu" method="_on_load_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/VBoxContainer/Quit" to="PlayerUI/PauseMenu" method="_on_quit_pressed"]
[connection signal="toggled" from="PlayerUI/Options/VBoxContainer/HBoxContainer2/FullscreenCheckBtn" to="PlayerUI/PauseMenu" method="_on_fullscreen_check_btn_toggled"]
[connection signal="value_changed" from="PlayerUI/Options/VolumeOptions/MasterSlider" to="PlayerUI/Options/VolumeOptions" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="PlayerUI/Options/VolumeOptions/MusicSlider" to="PlayerUI/Options/VolumeOptions" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PlayerUI/Options/VolumeOptions/SfxSlider" to="PlayerUI/Options/VolumeOptions" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="PlayerUI/Options/BackBtn" to="PlayerUI/PauseMenu" method="_on_back_btn_pressed"]
[connection signal="pressed" from="PlayerUI/GameOverWindow/Panel/VBoxContainer/Continue" to="PlayerUI/PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PlayerUI/GameOverWindow/Panel/VBoxContainer/Quit" to="PlayerUI/PauseMenu" method="_on_quit_pressed"]
